# school-brainhack.github.io

./: .all-contributorsrc  .gitignore  .gitmodules  EEMD.mat  LICENSE  README.md  code.py  config.toml  config.yaml  index.md  netlify.toml  notconfig.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: improve-modules.md  new-modules .md  new-modules.yml
content/: coc.md  locations.md
content/en/: coc.md  guide.md  register.md
content/en/project/Twin-normative-modelling/utils/: README.md  pyproject.toml
content/en/project/Twin-normative-modelling/utils/src/: my_utils.py
content/fr/: coc.md  guide.md  register.md  schedule.md
data/carousel/: brainhack_overview.yaml  code.yaml  data_science.yaml  ml.yaml  open_data.yaml
data/clients/: 3.yaml
data/en/: instructors.yaml  schedule.yaml
data/fr/: instructors.yaml
data/instructors/: glatard.yaml
data/testimonials/: 3.yaml
i18n/: en.yaml  fr.yaml
layouts/: index.html
layouts/_default/: list.html  single.html
layouts/coc/: single.html
layouts/locations/: single.html
layouts/modules/: list.html  single.html
layouts/page/: single.html
layouts/partials/: breadcrumbs.html  carousel.html  clients.html  features.html  footer.html  head.html  instructors.html  nav.html  schedule.html  see_more.html  sidebar.html  sidebar_modules.html  sidebar_sites.html  testimonials.html  top.html
layouts/project/: list.html  single.html
layouts/schedule/: single.html  single.ics
layouts/setup/: single.html
layouts/shortcodes/: class.html  tab.html  tabs.html
layouts/sites/: list.html  (+1 more)
(+373 files in other folders)
